feat: main page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,68 @@
 {
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "cSpell.words": [
+    "accumsan",
+    "adipiscing",
+    "aesthetist",
+    "alterna",
+    "amet",
+    "arcu",
+    "Auctor",
+    "augue",
+    "condimentum",
     "Delote",
+    "donec",
+    "elementum",
+    "elit",
+    "facilisi",
+    "faucibus",
+    "fringilla",
+    "iaculis",
+    "imperdiet",
     "insta",
+    "malesuada",
+    "neque",
+    "nibh",
+    "nulla",
+    "oribe",
+    "ornare",
+    "penatibus",
+    "pharetra",
+    "proin",
+    "quisque",
+    "rutrum",
+    "sapien",
+    "sociis",
+    "tortor",
+    "tristique",
+    "ultrices",
+    "Velit",
+    "venenatis",
+    "vestibulum",
+    "viverra",
+    "Vkontakte",
     "Акции",
+    "Визаж",
     "вниз",
     "Главная",
     "Контакты",
     "Косметика",
+    "Косметология",
     "красоты",
     "Крестовском",
     "Мастера",
+    "Наши",
+    "Новоостровский",
     "Отзывы",
+    "Парикмахерские",
+    "Педикюр",
+    "Показать",
     "Прокрутите",
-    "Салон"
+    "проспект",
+    "Режим",
+    "Салон",
+    "соцсетях",
+    "телу",
+    "Эстетист"
   ]
 }
