feat: our team page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,9 +43,12 @@
     "viverra",
     "Vkontakte",
     "Акции",
+    "Васильевна",
     "Визаж",
+    "Визажист",
     "вниз",
     "Главная",
+    "Елена",
     "Контакты",
     "Косметика",
     "Косметология",
