feat: price page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,9 +47,12 @@
     "Визаж",
     "Визажист",
     "вниз",
+    "волос",
     "Главная",
     "Елена",
+    "Женская",
     "Контакты",
+    "кончинков",
     "Косметика",
     "Косметология",
     "красоты",
@@ -67,6 +70,8 @@
     "Салон",
     "соцсетях",
     "телу",
+    "укладка",
+    "Цены",
     "Эстетист"
   ]
 }
