feat: settings navbar links

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
     "Главная",
     "Елена",
     "Женская",
+    "Извините",
     "Контакты",
     "кончинков",
     "Косметика",
@@ -66,9 +67,12 @@
     "Показать",
     "Прокрутите",
     "проспект",
+    "разработки",
     "Режим",
     "Салон",
     "соцсетях",
+    "стадии",
+    "страница",
     "телу",
     "укладка",
     "Цены",
