feat: added cosmetic page and reviews page, popup styling, links fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,20 @@
   "cSpell.words": [
     "accumsan",
     "adipiscing",
+    "adipisicing",
     "aesthetist",
     "alterna",
     "amet",
     "arcu",
+    "atque",
     "Auctor",
     "augue",
+    "autem",
     "condimentum",
+    "consequatur",
+    "corrupti",
     "Delote",
+    "doloremque",
     "donec",
     "elementum",
     "elit",
@@ -20,20 +26,31 @@
     "iaculis",
     "imperdiet",
     "insta",
+    "itaque",
+    "labore",
     "malesuada",
+    "mollitia",
     "neque",
     "nibh",
     "nulla",
+    "officiis",
     "oribe",
     "ornare",
     "Ourworks",
     "penatibus",
+    "perferendis",
     "pharetra",
+    "porro",
     "proin",
+    "quidem",
     "quisque",
+    "recusandae",
+    "rerum",
     "rutrum",
     "sapien",
     "sociis",
+    "soluta",
+    "tenetur",
     "tortor",
     "tristique",
     "ultrices",
@@ -42,6 +59,7 @@
     "vestibulum",
     "viverra",
     "Vkontakte",
+    "voluptatum",
     "Акции",
     "Васильевна",
     "Визаж",
@@ -61,6 +79,7 @@
     "Мастера",
     "Наши",
     "Новоостровский",
+    "отзывов",
     "Отзывы",
     "Парикмахерские",
     "Педикюр",
