feat: mapping employees

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,14 +73,18 @@
     "Контакты",
     "кончинков",
     "Косметика",
+    "Косметолог",
     "Косметология",
     "красоты",
     "Крестовском",
+    "маникюра",
+    "Мастер",
     "Мастера",
     "Наши",
     "Новоостровский",
     "отзывов",
     "Отзывы",
+    "Парикмахер",
     "Парикмахерские",
     "Педикюр",
     "Показать",
