--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
     "mollitia",
     "neque",
     "nibh",
+    "noworks",
     "nulla",
     "officiis",
     "oribe",
@@ -67,6 +68,7 @@
     "вниз",
     "волос",
     "Главная",
+    "добавлены",
     "Елена",
     "Женская",
     "Извините",
@@ -90,6 +92,7 @@
     "Показать",
     "Прокрутите",
     "проспект",
+    "работ",
     "разработки",
     "Режим",
     "Салон",
@@ -98,6 +101,7 @@
     "страница",
     "телу",
     "укладка",
+    "Фото",
     "Цены",
     "Эстетист"
   ]
