--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
     "вниз",
     "волос",
     "Главная",
+    "главную",
     "добавлены",
     "Елена",
     "Женская",
@@ -82,6 +83,7 @@
     "маникюра",
     "Мастер",
     "Мастера",
+    "найдена",
     "Наши",
     "Новоостровский",
     "отзывов",
