feat: yandex map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
     "penatibus",
     "perferendis",
     "pharetra",
+    "Placemark",
     "porro",
     "proin",
     "quidem",
@@ -81,6 +82,7 @@
     "Косметология",
     "красоты",
     "Крестовском",
+    "Ленинской",
     "маникюра",
     "Мастер",
     "Мастера",
