feat: footer adaptive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
     "Косметология",
     "красоты",
     "Крестовском",
+    "Ленинская",
     "Ленинской",
     "маникюра",
     "Мастер",
@@ -106,6 +107,7 @@
     "страница",
     "телу",
     "укладка",
+    "улица",
     "Фото",
     "Цены",
     "Эстетист"
